fix(PaymentAlert): increase gap size

--- a/src/components/Checkout/components/PaymentAlert/PaymentAlert.module.css
+++ b/src/components/Checkout/components/PaymentAlert/PaymentAlert.module.css
@@ -6,7 +6,7 @@
 
   display: grid;
   place-items: center;
-  gap: 8px;
+  gap: 16px;
 
   padding: 16px;
   border-radius: 8px;
